--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.0.2
+Flask-JWT-Extended==4.3.1
 Flask-SQLAlchemy==2.5.1
-SQLAlchemy==1.4.25
-
-gunicorn
+psycopg2-binary==2.9.1
+gunicorn==20.1.0
