--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 
 services:
   web:
@@ -6,8 +6,8 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - DATABASE_URL=postgresql://user:password@db/prod_db
+      - JWT_SECRET_KEY=your_secret_key
     volumes:
       - .:/app
     depends_on:
@@ -21,6 +21,15 @@ services:
       POSTGRES_PASSWORD: password
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  test:
+    build: .
+    command: pytest
+    environment:
+      - DATABASE_URL=postgresql://user:password@db/prod_db
+      - JWT_SECRET_KEY=your_secret_key
+    depends_on:
+      - db
 
 volumes:
   pgdata:
